--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "jms/serializer": "~0.12",
+        "jms/serializer": "dev-master",
         "symfony/framework-bundle": "~2.1"
     },
     "require-dev": {
