--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "jms/serializer": "dev-tamago@dev",
+        "jms/serializer": "dev-tamago",
         "symfony/framework-bundle": "~2.1"
     },
     "require-dev": {
